design rechange in project page

--- a/index.html
+++ b/index.html
@@ -444,9 +444,7 @@
                 <h2 class="display-5 fw-bolder">
                   <span class="text-gradient d-inline">About Me</span>
                 </h2>
-                <p class="lead fw-light mb-4">
-                  My name is Md. Askar Ibne Saikh Sagor
-                </p>
+                <p class="lead fw-light mb-4">Md. Askar Ibne Saikh Sagor</p>
                 <p class="text-muted">
                   Passionate software developer with expertise in Laravel and
                   backend development. Skilled in building scalable web
