--- a/projects.html
+++ b/projects.html
@@ -140,12 +140,9 @@
               <!-- project 1 -->
               <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                 <div class="card-body p-0 h-100">
-                  <div
-                    class="row align-items-stretch g-2"
-                    style="height: 16rem"
-                  >
+                  <div class="row align-items-stretch g-2">
                     <!-- Content Section -->
-                    <div class="col-md-6 p-4 d-flex flex-column">
+                    <div class="col-md-6 col-12 p-4 d-flex flex-column order-1">
                       <h2 class="fw-bolder">MuktoKowlom</h2>
                       <p>
                         MuktoKowlom is a storytelling platform where writers can
@@ -158,7 +155,7 @@
                     </div>
 
                     <!-- Middle Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-2">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -172,7 +169,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/muktokowlom-frontend.png"
                           alt="Project Image"
@@ -184,7 +182,7 @@
                     </div>
 
                     <!-- Right Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-3">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -198,7 +196,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/muktokowlom-backend.png"
                           alt="Project Image"
@@ -215,12 +214,9 @@
               <!-- project 2 -->
               <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                 <div class="card-body p-0 h-100">
-                  <div
-                    class="row align-items-stretch g-2"
-                    style="height: 16rem"
-                  >
+                  <div class="row align-items-stretch g-2">
                     <!-- Content Section -->
-                    <div class="col-md-6 p-4 d-flex flex-column">
+                    <div class="col-md-6 col-12 p-4 d-flex flex-column order-1">
                       <h2 class="fw-bolder">HRMS</h2>
                       <p>
                         HRM software automates employee management tasks like
@@ -228,12 +224,12 @@
                         tracking, improving efficiency and compliance.
                       </p>
                       <p>
-                        <b>Technology Used:</b>PHP, Laravel, Bootstrap, MySQL.
+                        <b>Technology Used:</b> PHP, Laravel, Bootstrap, MySQL.
                       </p>
                     </div>
 
                     <!-- Middle Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-2">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -247,7 +243,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/hrm-frontend.png"
                           alt="Project Image"
@@ -259,7 +256,7 @@
                     </div>
 
                     <!-- Right Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-3">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -273,7 +270,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/hrm-backend.png"
                           alt="Project Image"
@@ -290,12 +288,9 @@
               <!-- project 3 -->
               <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                 <div class="card-body p-0 h-100">
-                  <div
-                    class="row align-items-stretch g-2"
-                    style="height: 16rem"
-                  >
+                  <div class="row align-items-stretch g-2">
                     <!-- Content Section -->
-                    <div class="col-md-6 p-4 d-flex flex-column">
+                    <div class="col-md-6 col-12 p-4 d-flex flex-column order-1">
                       <h2 class="fw-bolder">Habibi Ya Habibi</h2>
                       <p>
                         HabibiYaHabibi is a multi-vendor eCommerce website built
@@ -303,12 +298,12 @@
                         selling, and vendor management.
                       </p>
                       <p>
-                        <b>Technology Used:</b>PHP, Laravel, Bootstrap, MySQL.
+                        <b>Technology Used:</b> PHP, Laravel, Bootstrap, MySQL.
                       </p>
                     </div>
 
                     <!-- Middle Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-2">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -322,7 +317,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/habibi-frontend.png"
                           alt="Project Image"
@@ -334,7 +330,7 @@
                     </div>
 
                     <!-- Right Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-3">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -348,7 +344,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/habibi-backend.png"
                           alt="Project Image"
@@ -365,12 +362,9 @@
               <!-- project 4 -->
               <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                 <div class="card-body p-0 h-100">
-                  <div
-                    class="row align-items-stretch g-2"
-                    style="height: 16rem"
-                  >
+                  <div class="row align-items-stretch g-2">
                     <!-- Content Section -->
-                    <div class="col-md-6 p-4 d-flex flex-column">
+                    <div class="col-md-6 col-12 p-4 d-flex flex-column order-1">
                       <h2 class="fw-bolder">Interior Design Website</h2>
                       <p>
                         An interior design website built with Laravel, JS, and
@@ -378,13 +372,13 @@
                         and client interactions.
                       </p>
                       <p>
-                        <b>Technology Used:</b>PHP, Laravel, Bootstrap, Raw CSS,
-                        MySQL.
+                        <b>Technology Used:</b> PHP, Laravel, Bootstrap, Raw
+                        CSS, MySQL.
                       </p>
                     </div>
 
                     <!-- Middle Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-2">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -398,7 +392,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/polock-interior-1.JPG"
                           alt="Project Image"
@@ -410,7 +405,7 @@
                     </div>
 
                     <!-- Right Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-3">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -424,7 +419,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/polock-interior-2.JPG"
                           alt="Project Image"
@@ -441,12 +437,9 @@
               <!-- project 5 -->
               <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                 <div class="card-body p-0 h-100">
-                  <div
-                    class="row align-items-stretch g-2"
-                    style="height: 16rem"
-                  >
+                  <div class="row align-items-stretch g-2">
                     <!-- Content Section -->
-                    <div class="col-md-6 p-4 d-flex flex-column">
+                    <div class="col-md-6 col-12 p-4 d-flex flex-column order-1">
                       <h2 class="fw-bolder">Bidding (Auction) Website</h2>
                       <p>
                         A bidding (auction) website built with Laravel, raw PHP,
@@ -454,13 +447,13 @@
                         user bidding, and secure transactions.
                       </p>
                       <p>
-                        <b>Technology Used:</b>Raw PHP, Laravel, JavaScript,
+                        <b>Technology Used:</b> Raw PHP, Laravel, JavaScript,
                         Bootstrap, MySQL.
                       </p>
                     </div>
 
                     <!-- Middle Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-2">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -474,7 +467,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/bid-frontend.png"
                           alt="Project Image"
@@ -486,7 +480,7 @@
                     </div>
 
                     <!-- Right Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div class="col-md-3 col-12 px-2 position-relative order-3">
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -500,7 +494,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/bid-backend.png"
                           alt="Project Image"
@@ -517,12 +512,11 @@
               <!-- project 6 -->
               <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                 <div class="card-body p-0 h-100">
-                  <div
-                    class="row align-items-stretch g-2"
-                    style="height: 16rem"
-                  >
+                  <div class="row align-items-stretch g-2">
                     <!-- Content Section -->
-                    <div class="col-md-6 p-4 d-flex flex-column">
+                    <div
+                      class="col-md-6 col-12 p-4 d-flex flex-column order-1 order-md-1"
+                    >
                       <h2 class="fw-bolder">Company Portfolio Website</h2>
                       <p>
                         HabibiYaHabibi is a multi-vendor eCommerce website built
@@ -530,13 +524,15 @@
                         selling, and vendor management.
                       </p>
                       <p>
-                        <b>Technology Used:</b>PHP, Laravel, Bootstrap, Raw CSS,
-                        MySQL.
+                        <b>Technology Used:</b> PHP, Laravel, Bootstrap, Raw
+                        CSS, MySQL.
                       </p>
                     </div>
 
                     <!-- Middle Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div
+                      class="col-md-3 col-12 px-2 position-relative order-2 order-md-2"
+                    >
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -550,7 +546,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/ngit-1.png"
                           alt="Project Image"
@@ -562,7 +559,9 @@
                     </div>
 
                     <!-- Right Image -->
-                    <div class="col-md-3 px-2 position-relative">
+                    <div
+                      class="col-md-3 col-12 px-2 position-relative order-3 order-md-3"
+                    >
                       <a
                         href="#"
                         data-bs-toggle="modal"
@@ -576,7 +575,8 @@
                             border-radius: 5px;
                             margin-top: 5px;
                             margin-bottom: 5px;
-                            height: 95%;
+                            height: auto;
+                            min-height: 200px;
                           "
                           src="assets/projects/ngit-2.png"
                           alt="Project Image"
