--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">
-                          2022 - Present
+                          Nov. 2022 - Present
                         </div>
                         <div class="small fw-bolder">Software Engineer</div>
                         <div class="small text-muted">NGIT, Polock Group</div>
@@ -109,7 +109,7 @@
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-3 rounded-4">
                         <div class="text-primary fw-bolder mb-2">
-                          Oct 2022 - Nov 2022
+                          Jan. 2022 - Oct. 2022
                         </div>
                         <div class="small fw-bolder">Software Engineer</div>
                         <div class="small text-muted">Apogee Digital Ltd.</div>
@@ -228,22 +228,10 @@
                     </div>
                     <div class="row row-cols-1 row-cols-md-12 mb-4">
                       <div class="col mb-4 mb-md-0">
-                        <div
-                          class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
-                        >
-                          <b>Fundamental:</b> Bootstrap, PHP, Python, SQLite,
-                          CPanel, VPS Server, Docker
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="row row-cols-1 row-cols-md-12">
-                      <div class="col mb-4 mb-md-0">
-                        <div
-                          class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
-                        >
-                          <b>Intermediate:</b> Tailwind CSS, Laravel, SQL,
-                          MySQL, MongoDB, REST API
+                        <div class="d-flex bg-light rounded-4 p-3 h-100">
+                          Bootstrap, PHP, Python, SQLite, CPanel, VPS Server,
+                          Docker, Tailwind CSS, Laravel, SQL, MySQL, MongoDB,
+                          REST API
                         </div>
                       </div>
                     </div>
