project url added

--- a/projects.html
+++ b/projects.html
@@ -152,6 +152,12 @@
                         literary community.
                       </p>
                       <p><b>Technology Used:</b> Laravel, Bootstrap, MySQL.</p>
+                      <p>
+                        <b>URL:</b>
+                        <a href="https://muktokowlom.com/"
+                          >https://muktokowlom.com/</a
+                        >
+                      </p>
                     </div>
 
                     <!-- Middle Image -->
@@ -226,6 +232,12 @@
                       <p>
                         <b>Technology Used:</b> PHP, Laravel, Bootstrap, MySQL.
                       </p>
+                      <p>
+                        <b>URL:</b>
+                        <a href="https://hr.polockinterior.com/">
+                          https://hr.polockinterior.com/
+                        </a>
+                      </p>
                     </div>
 
                     <!-- Middle Image -->
@@ -299,6 +311,12 @@
                       </p>
                       <p>
                         <b>Technology Used:</b> PHP, Laravel, Bootstrap, MySQL.
+                      </p>
+                      <p>
+                        <b>URL:</b>
+                        <a href="http://habibiyahabibi.com/">
+                          http://habibiyahabibi.com/
+                        </a>
                       </p>
                     </div>
 
@@ -375,6 +393,12 @@
                         <b>Technology Used:</b> PHP, Laravel, Bootstrap, Raw
                         CSS, MySQL.
                       </p>
+                      <p>
+                        <b>URL:</b>
+                        <a href="https://polockinterior.com/">
+                          https://polockinterior.com/
+                        </a>
+                      </p>
                     </div>
 
                     <!-- Middle Image -->
@@ -450,6 +474,12 @@
                         <b>Technology Used:</b> Raw PHP, Laravel, JavaScript,
                         Bootstrap, MySQL.
                       </p>
+                      <p>
+                        <b>URL:</b>
+                        <a href="https://bid.ngiit.com/">
+                          https://bid.ngiit.com/
+                        </a>
+                      </p>
                     </div>
 
                     <!-- Middle Image -->
@@ -519,13 +549,21 @@
                     >
                       <h2 class="fw-bolder">Company Portfolio Website</h2>
                       <p>
-                        HabibiYaHabibi is a multi-vendor eCommerce website built
-                        with Laravel and MySQL, enabling seamless buying,
-                        selling, and vendor management.
+                        Designed & developed company portfolio website using
+                        Laravel & bootstrap, featuring a sleek and modern
+                        design. The site showcases company services, projects,
+                        and branding with a responsive and visually appealing
+                        layout.
                       </p>
                       <p>
                         <b>Technology Used:</b> PHP, Laravel, Bootstrap, Raw
                         CSS, MySQL.
+                      </p>
+                      <p>
+                        <b>URL:</b>
+                        <a href="https://www.ngitbd.com/">
+                          https://www.ngitbd.com/
+                        </a>
                       </p>
                     </div>
 
